<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/universal_backgraund"
        />

    <LinearLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonBack2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/backarrow"
                    android:paddingRight="4dp"

                    />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/container4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linelevel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textLevelSection"
                            android:layout_width="190dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="?android:selectableItemBackground"
                            android:gravity="center"
                            android:text="@string/world"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textLevelSection2"
                            android:layout_width="190dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="?android:selectableItemBackground"
                            android:gravity="center"
                            android:text="@string/premierLiga"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textLevelSection3"
                            android:layout_width="190dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="?android:selectableItemBackground"
                            android:gravity="center"
                            android:text="@string/laLiga"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textLevelSection4"
                            android:layout_width="190dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="?android:selectableItemBackground"
                            android:gravity="center"
                            android:text="@string/bundesLiga"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textLevelSection5"
                            android:layout_width="190dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="?android:selectableItemBackground"
                            android:gravity="center"
                            android:text="@string/seria_a"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textLevelSection6"
                            android:layout_width="190dp"
                            android:layout_height="80dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="?android:selectableItemBackground"
                            android:gravity="center"
                            android:text="@string/liga_1"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold" />


                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>